tests/ui/sanitize-attr/invalid-sanitize.stderr
error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:4:1
   |
LL | #[sanitize(brontosaurus = "off")]
   | ^^^^^^^^^^^------------^^^^^^^^^^
   |            |
   |            valid arguments are "address", "cfi", "kcfi", "memory", "memtag", "shadow_call_stack", "thread", "hwaddress" or "realtime"
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[sanitize(brontosaurus = "off")]
LL + #[sanitize(address = "on|off")]
   |
LL - #[sanitize(brontosaurus = "off")]
LL + #[sanitize(cfi = "on|off")]
   |
LL - #[sanitize(brontosaurus = "off")]
LL + #[sanitize(hwaddress = "on|off")]
   |
LL - #[sanitize(brontosaurus = "off")]
LL + #[sanitize(kcfi = "on|off")]
   |
   = and 6 other candidates

error: multiple `sanitize` attributes
  --> $DIR/invalid-sanitize.rs:7:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/invalid-sanitize.rs:8:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: multiple `sanitize` attributes
  --> $DIR/invalid-sanitize.rs:11:1
   |
LL | #[sanitize(address = "on")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/invalid-sanitize.rs:12:1
   |
LL | #[sanitize(address = "off")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:15:1
   |
LL | #[sanitize(address = "bogus")]
   | ^^^^^^^^^^^^^^^^^^^^^-------^^
   |                      |
   |                      valid arguments are "on" or "off"
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[sanitize(address = "bogus")]
LL + #[sanitize(address = "on|off")]
   |
LL - #[sanitize(address = "bogus")]
LL + #[sanitize(cfi = "on|off")]
   |
LL - #[sanitize(address = "bogus")]
LL + #[sanitize(hwaddress = "on|off")]
   |
LL - #[sanitize(address = "bogus")]
LL + #[sanitize(kcfi = "on|off")]
   |
   = and 6 other candidates

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:18:1
   |
LL | #[sanitize = "off"]
   | ^^^^^^^^^^^^^^^^^^^ expected this to be a list
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[sanitize = "off"]
LL + #[sanitize(address = "on|off")]
   |
LL - #[sanitize = "off"]
LL + #[sanitize(cfi = "on|off")]
   |
LL - #[sanitize = "off"]
LL + #[sanitize(hwaddress = "on|off")]
   |
LL - #[sanitize = "off"]
LL + #[sanitize(kcfi = "on|off")]
   |
   = and 6 other candidates

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:21:1
   |
LL | #[sanitize]
   | ^^^^^^^^^^^ expected this to be a list
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[sanitize(address = "on|off")]
   |           ++++++++++++++++++++
LL | #[sanitize(cfi = "on|off")]
   |           ++++++++++++++++
LL | #[sanitize(hwaddress = "on|off")]
   |           ++++++++++++++++++++++
LL | #[sanitize(kcfi = "on|off")]
   |           +++++++++++++++++
   = and 6 other candidates

error[E0539]: malformed `sanitize` attribute input
  --> $DIR/invalid-sanitize.rs:24:1
   |
LL | #[sanitize(realtime = "on")]
   | ^^^^^^^^^^^^^^^^^^^^^^----^^
   |                       |
   |                       valid arguments are "nonblocking", "blocking" or "caller"
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[sanitize(realtime = "on")]
LL + #[sanitize(address = "on|off")]
   |
LL - #[sanitize(realtime = "on")]
LL + #[sanitize(cfi = "on|off")]
   |
LL - #[sanitize(realtime = "on")]
LL + #[sanitize(hwaddress = "on|off")]
   |
LL - #[sanitize(realtime = "on")]
LL + #[sanitize(kcfi = "on|off")]
   |
   = and 6 other candidates

warning: the async executor can run blocking code, without realtime sanitizer catching it
  --> $DIR/invalid-sanitize.rs:27:1
   |
LL | #[sanitize(realtime = "nonblocking")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(rtsan_nonblocking_async)]` on by default

warning: the async executor can run blocking code, without realtime sanitizer catching it
  --> $DIR/invalid-sanitize.rs:32:9
   |
LL | ...   #[sanitize(realtime = "nonblocking")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the async executor can run blocking code, without realtime sanitizer catching it
  --> $DIR/invalid-sanitize.rs:37:9
   |
LL | ...   #[sanitize(realtime = "nonblocking")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0539`.
